objects/Milestone1_Milestone__c.object
<CustomObject>
    <description>Force.com Labs - PM - Milestones are significant events in the life-cycle of a Project. Milestones can have tasks and sub-milestones associated with them.</description>
    <fields>
        <fullName>Actual_Expense_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from expense records related to tasks on child milestones</inlineHelpText>
        <label>Actual Expense From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Expense_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from expense records related to tasks on this milestone</inlineHelpText>
        <label>Actual Expense From Tasks</label>
        <summarizedField>Milestone1_Task__c.Total_Expense__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from time records related to tasks on child milestones</inlineHelpText>
        <label>Actual Hours From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from time records related to tasks on this milestone</inlineHelpText>
        <label>Actual Hours From Tasks</label>
        <summarizedField>Milestone1_Task__c.Total_Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <description>This is the alias for a milestone.</description>
        <inlineHelpText>An alias helps you associate a task to a milestone using the single line entry home page component.</inlineHelpText>
        <label>Milestone Alias</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Blocked_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>How many tasks are blocked in sub-milestones?</inlineHelpText>
        <label>Blocked Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Blocked_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
        <label>Blocked Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Blocked__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complete_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of complete tasks related to sub-milestones</inlineHelpText>
        <label>Complete Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Complete_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of complete tasks related to this milestone</inlineHelpText>
        <label>Complete Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This signifies that this milestone has been completed.</inlineHelpText>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Days_Start__c</fullName>
        <label>DB Days Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <label>DB Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <inlineHelpText>The date that this deadline needs to be finished by.</inlineHelpText>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>A general description of the milestone.</inlineHelpText>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Deadline__c -  Kickoff__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Days between Kickoff and Deadline.</inlineHelpText>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
        <label>Estimated Expense From Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Expense_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from tasks on this milestone</inlineHelpText>
        <label>Estimated Expense From Tasks</label>
        <summarizedField>Milestone1_Task__c.Estimated_Expense__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_From_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Calculated from tasks on child milestones</inlineHelpText>
        <label>Estimated Hours From Sub-Milestones</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours_From_Tasks__c</fullName>
        <inlineHelpText>Calculated from tasks on this milestone</inlineHelpText>
        <label>Estimated Hours From Tasks</label>
        <summarizedField>Milestone1_Task__c.Estimated_Hours__c</summarizedField>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Expense_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expense budget for the milestone.</inlineHelpText>
        <label>Milestone Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expense_Budget_from_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The expense budget all the sub milestones of this milestone.</inlineHelpText>
        <label>Expense Budget from Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hours_Budget__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The hours budget for the milestone.</inlineHelpText>
        <label>Milestone Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_Budget_from_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The total hours budget for all the sub milestones for this milestone.</inlineHelpText>
        <label>Hours Budget from Sub-Milestones</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ImportID__c</fullName>
        <inlineHelpText>An Import ID used during the XML export/import process only.</inlineHelpText>
        <label>Import ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kickoff__c</fullName>
        <inlineHelpText>When should this milestone kickoff?</inlineHelpText>
        <label>Kickoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of incomplete and overdue tasks related to child milestones</inlineHelpText>
        <label>Late Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Tasks_2__c</fullName>
        <inlineHelpText>How many tasks are late?</inlineHelpText>
        <label>Late Tasks (in Tasks)2</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Days_Late__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Late_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of incomplete and overdue tasks related to this milestone</inlineHelpText>
        <label>Late Tasks (in Tasks)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NameClean__c</fullName>
        <description>Formula designed to keep a Gantt safe chart name.  Note: this field may be discontinued.</description>
        <formula>SUBSTITUTE(Name, &apos;&quot;&apos;, &apos; &apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameClean</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Okay_to_Reparent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A hidden field used to prevent users from manually moving Milestones to different Projects</description>
        <label>Okay to Reparent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Late_Blocked_Tasks__c</fullName>
        <formula>IF( max( Total_Open_Tasks__c, Total_Late_Tasks__c, Total_Blocked_Tasks__c) &gt; 0,
IMAGE(&quot;http://chart.apis.google.com/chart?chxt=y&amp;chbh=a&amp;chs=300x225&amp;cht=bvg&amp;&quot;&amp;
&quot;chxr=0,0,&quot; &amp; Text(max( Total_Open_Tasks__c, Total_Late_Tasks__c, Total_Blocked_Tasks__c)) &amp; &quot;&amp;&quot;&amp;
&quot;chco=eeaa66,2299bb,ee3322&amp;chdl=&quot;&amp;
&quot;Open (&quot; &amp; TEXT(Total_Open_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Late (&quot; &amp; TEXT(Total_Late_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;|Blocked (&quot; &amp; TEXT(Total_Blocked_Tasks__c) &amp; &quot;)&quot;&amp;
&quot;&amp;chd=t:&quot;&amp; TEXT(Total_Open_Tasks__c/ max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100)&amp;&quot;|&quot;&amp; TEXT(Total_Late_Tasks__c / max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100) &amp;&quot;|&quot; &amp; TEXT(Total_Blocked_Tasks__c/ max(Total_Open_Tasks__c, Total_Blocked_Tasks__c, Total_Late_Tasks__c) * 100) , &quot;Project Status, Open Tasks, Late Tasks &amp; Blocked Tasks&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open, Late &amp; Blocked Tasks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Tasks_in_Sub_Milestones__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of incomplete tasks related to child milestones</inlineHelpText>
        <label>Open Tasks (in Sub-Milestones)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Open_Tasks_in_Tasks__c</fullName>
        <inlineHelpText>Number of incomplete tasks related to this milestone</inlineHelpText>
        <label>Open Tasks (in Tasks)</label>
        <summaryFilterItems>
            <field>Milestone1_Task__c.Complete__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Milestone1_Task__c.Project_Milestone__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Open_vs_Complete_Tasks__c</fullName>
        <formula>IMAGE(&quot;http://chart.apis.google.com/chart?chco=eeaa66,2299bb&amp;chs=300x225&amp;cht=p&amp;chd=t:&quot;&amp;Text( Total_Open_Tasks__c )&amp;&quot;,&quot;&amp;Text(Total_Complete_Tasks__c)&amp;&quot;&amp;chdl=&quot;&amp;
&quot;Open%20Tasks (&quot; &amp; TEXT(Total_Open_Tasks__c) &amp;&quot;)&quot;&amp;
&quot;|Complete%20Tasks (&quot; &amp; TEXT(Total_Complete_Tasks__c) &amp;&quot;)&quot;
,&quot;Open vs. Complete Tasks&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open vs. Complete Tasks</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Milestone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent milestone for this milestone if applicable.</inlineHelpText>
        <label>Parent Milestone</label>
        <referenceTo>Milestone1_Milestone__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Child_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Kickoff_Offset__c</fullName>
        <formula>NULLVALUE(Kickoff__c -  Project__r.Kickoff__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many days after project kickoff does this milestone kickoff?</inlineHelpText>
        <label>Project Kickoff Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The project this milestone is assigned to. If this is a sub-milestone this field is empty.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Project_Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Expense__c</fullName>
        <formula>Actual_Expense_From_Tasks__c + Actual_Expense_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from expense records on tasks for this milestone and all child milestones</inlineHelpText>
        <label>Total Actual Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Actual_Hours__c</fullName>
        <formula>Actual_Hours_From_Tasks__c + Actual_Hours_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from time records on tasks for this milestone and all child milestones</inlineHelpText>
        <label>Total Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Blocked_Tasks__c</fullName>
        <formula>Blocked_Tasks_in_Tasks__c +  Blocked_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How many tasks are flagged as blocked?</inlineHelpText>
        <label>Total Blocked Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Complete_Tasks__c</fullName>
        <formula>Complete_Tasks_in_Tasks__c  +  Complete_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Complete Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Expense__c</fullName>
        <formula>Estimated_Expense_From_Tasks__c + Estimated_Expense_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
        <label>Total Estimated Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Estimated_Hours__c</fullName>
        <formula>Estimated_Hours_From_Tasks__c + Estimated_Hours_From_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated from task records for this milestone and all child milestones</inlineHelpText>
        <label>Total Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Balance__c</fullName>
        <formula>Total_Estimated_Expense__c - Total_Actual_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as total estimated expense - total actual expense</inlineHelpText>
        <label>Total Expense Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Expense_Budget__c</fullName>
        <formula>Expense_Budget__c +  Expense_Budget_from_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as expense budget + expense budget from sub milestones</inlineHelpText>
        <label>Total Expense Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Balance__c</fullName>
        <formula>Total_Estimated_Hours__c - Total_Actual_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as total estimated hours - total actual hours</inlineHelpText>
        <label>Total Hours Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Budget__c</fullName>
        <formula>Hours_Budget__c + Hours_Budget_from_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated as hours budget + hours budget from sub milestones</inlineHelpText>
        <label>Total Hours Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Late_Tasks__c</fullName>
        <formula>Late_Tasks_in_Tasks_2__c + Late_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of incomplete and overdue tasks related to this milestone and its child milestones</inlineHelpText>
        <label>Total Late Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Open_Tasks__c</fullName>
        <formula>Open_Tasks_in_Tasks__c + Open_Tasks_in_Sub_Milestones__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of incomplete tasks related to this milestone and its child milestones</inlineHelpText>
        <label>Total Open Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Parent_Milestone__c</columns>
        <columns>DB_Days__c</columns>
        <columns>Project__c</columns>
        <columns>Deadline__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Milestones</fullName>
        <columns>Project__c</columns>
        <columns>NAME</columns>
        <columns>Deadline__c</columns>
        <columns>Total_Open_Tasks__c</columns>
        <columns>Total_Late_Tasks__c</columns>
        <columns>Total_Blocked_Tasks__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Parent_Milestone__c</field>
            <operation>equals</operation>
        </filters>
        <label>My Milestones</label>
    </listViews>
    <nameField>
        <label>Project Milestone Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Alias_must_not_contain_spaces</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(TRIM(Alias__c ),&quot; &quot;)</errorConditionFormula>
        <errorDisplayField>Alias__c</errorDisplayField>
        <errorMessage>The Milestone Alias cannot contain spaces.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CanNotAddSubmilestoneToParentCompleted</fullName>
        <active>true</active>
        <errorConditionFormula>Parent_Milestone__r.Complete__c</errorConditionFormula>
        <errorDisplayField>Parent_Milestone__c</errorDisplayField>
        <errorMessage>You can not add milestones to parent milestones with status completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotBeCompleteWithOpenTasks</fullName>
        <active>true</active>
        <errorConditionFormula>if( and(Complete__c == true, Total_Open_Tasks__c &gt; 0), true, false)</errorConditionFormula>
        <errorDisplayField>Complete__c</errorDisplayField>
        <errorMessage>You cannot mark a milestone as complete if it has open tasks.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Deadline_within_project_boundaries</fullName>
        <active>false</active>
        <errorConditionFormula>if ( and (Deadline__c &lt;&gt; null, Project__r.Deadline__c &lt;&gt;  null, Deadline__c &gt; Project__r.Deadline__c) , true, false)</errorConditionFormula>
        <errorDisplayField>Deadline__c</errorDisplayField>
        <errorMessage>Deadline must be less than or equal to the project deadline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Kickoff_before_deadline</fullName>
        <active>false</active>
        <description>Kickoff must be less or equal than the deadline</description>
        <errorConditionFormula>NOT(ISNULL(Kickoff__c)) &amp;&amp; NOT(ISNULL(Deadline__c)) &amp;&amp;  Deadline__c &lt; Kickoff__c</errorConditionFormula>
        <errorDisplayField>Kickoff__c</errorDisplayField>
        <errorMessage>Kickoff must be less or equal than the deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Milestone_between_Project_duration</fullName>
        <active>false</active>
        <description>Milestone kickoff must be grater or equal than project kickoff and milestone deadline must be less or equal than project deadline</description>
        <errorConditionFormula>(NOT(ISNULL(Kickoff__c)) &amp;&amp; NOT(ISNULL(Project__r.Kickoff__c )) &amp;&amp; Kickoff__c&lt; Project__r.Kickoff__c ) 
|| 
(NOT(ISNULL(Deadline__c)) &amp;&amp; NOT(ISNULL(Project__r.Deadline__c)) &amp;&amp; Deadline__c &gt; Project__r.Deadline__c)</errorConditionFormula>
        <errorMessage>Milestone kickoff must be grater or equal than project kickoff and milestone deadline must be less or equal than project deadline</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Milestone_must_have_parent_record</fullName>
        <active>true</active>
        <description>Milestone records must always have a parent Project and/or a parent Milestone</description>
        <errorConditionFormula>ISBLANK(Project__c) &amp;&amp; ISBLANK(Parent_Milestone__c)</errorConditionFormula>
        <errorMessage>Please select a parent Project, a parent Milestone, or both.</errorMessage>
    </validationRules>
</CustomObject>